--- a/time.html
+++ b/time.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+    <script src="/rsrc/js/onclick.js"></script>
+    <script src="/rsrc/js/site.js"></script>
     <script src="/rsrc/js/timestamp.js"></script>
 </head>
 
