--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <div class="container">
-        <h1>Hello</h1>
+        <h1>Greetings from Your SkySister</h1>
+        <p>SkySister is a set of utilities written by Maru Skyborne. Look for updates soon! I hope.</p>
     </div>
 </body>
 
