--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="container">
         <h1>Greetings from Your Sky Sister</h1>
         <p>Sky Sister is a set of utilities written by Maru Skyborne. Look for updates soon! I hope.</p>
+        <hr>
+        <h2>Eve Online</h2>
+        <a class="btn btn-primary" href="time.html">Time</a>
     </div>
 </body>
 
