--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Sky Sister is a set of utilities written by Maru Skyborne. Look for updates soon! I hope.</p>
         <hr>
         <h2>Eve Online</h2>
-        <a class="btn btn-primary" href="time.html">Time</a>
+        <a class="btn btn-primary" href="time.html">Time Stamp</a>
     </div>
 </body>
 
